fix: fix `paginator` view `micro` CSS issues. Force to no wrap in flex container.

--- a/core/paginator/css/paginator.less
+++ b/core/paginator/css/paginator.less
@@ -172,6 +172,7 @@
 
 	&.micro >.content_data {
 		font-size: 0.8rem;
+		flex-wrap: nowrap;
 
 		// buttons (nav_buttons)
 		>.nav_buttons {
